# cpo

./: .gitmodules  CMakeLists.txt  README.md
cpo/: CMakeLists.txt  package.xml
cpo/config/: default.yaml
cpo/include/: CpoFrontEnd.hpp  SatelliteObs.hpp
cpo/src/: CpoFrontEnd.cpp  SatelliteObs.cpp  clock_server.cpp  main.cpp  replay_rtcm.cpp
cpo/tmuxp/: bag-cpo.yaml  cpo.yaml
cpo_analysis/: package.xml  requirements.txt  setup.cfg  setup.py
cpo_analysis/cpo_analysis/: figs_plot_from_file.py  figs_plot_from_file_dropout.py  plot_from_file.py  plot_from_msg.py
cpo_analysis/data/estimates/: placeholder.txt
cpo_analysis/data/groundtruth/: feb10a_gga.ASC  feb10b_gga.ASC  feb10c_gga.ASC  feb10d_gga.ASC  feb15a_gga.ASC  feb15b_gga.ASC  feb15c_gga.ASC  feb15d_gga.ASC  feb15e_gga.ASC  feb15f_gga.ASC
cpo_backend/: CMakeLists.txt  package.xml
cpo_backend/config/: default.yaml  offline.yaml  online.yaml
cpo_backend/include/: CpoBackEnd.hpp
cpo_backend/include/cpo_backend/: CpoBackEnd.hpp  TdcpErrorEval.hpp
cpo_backend/include/steam_extensions/: LogMapSo3Evaluator.hpp  RollErrorEval.hpp  RotationEvaluator.hpp  RotationStateEvaluator.hpp  TdcpErrorEval.hpp  UnicycleErrorEval.hpp
cpo_backend/src/: CpoBackEnd.cpp  TdcpErrorEval.cpp  main.cpp
cpo_backend/src/steam_extensions/: LogMapSo3.cpp  RollErrorEval.cpp  RotationStateEvaluator.cpp  TdcpErrorEval.cpp  UnicycleErrorEval.cpp
cpo_frontend/: CMakeLists.txt  package.xml
cpo_frontend/config/: offline.yaml  online.yaml
cpo_frontend/include/: CpoFrontEnd.hpp  SatelliteObs.hpp  cpo_utilities.hpp
cpo_frontend/src/: CpoFrontEnd.cpp  SatelliteObs.cpp  clock_server.cpp  main.cpp  replay_rtcm.cpp
cpo_frontend/tmuxp/: bag-cpo.yaml  cpo.yaml  offline-cpo.yaml  online-cpo.yaml
cpo_interfaces/: CMakeLists.txt  package.xml
cpo_interfaces/msg/: SatPair.msg  TDCP.msg
cpo_interfaces/srv/: QueryTrajectory.srv
include/: CpoFrontEnd.hpp
src/: CpoFrontEnd.cpp  main.cpp  replay_rtcm.cpp
