<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cpo_backend</name>
  <version>0.0.0</version>
  <description>Carrier-Phase Odometry Optimization</description>
  <maintainer email="ben.congram@robotics.utias.utoronto.ca">Ben</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>cpo_interfaces</depend>
  <depend>lgmath</depend>
  <depend>steam</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
